--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,8 @@ body {
   margin-left: 0;
   font-size: 15px;
   text-decoration: none;
-  font-family: "Orator STD", sans-serif;
+  font-family: "Source Code Pro", sans-serif;
+  text-transform: uppercase;
   color: black;
   z-index: 1001;
 }
