update styles.css and umbrella.jpg name

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
 
 .parallax3 {
     /* The image used */
-    background-image: url("/images/everythingiscovered.jpg");
+    background-image: url("/images/umbrella.jpg");
     opacity: 0.6;
 
     /* Set a specific height */
